--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
         Contact & Inquiry
       </h3>
       <div class="form__wrapper">
-        <form name="contact" netlify>
+        <form name="contact" method="POST" netlify>
           <div class="form__group">
             <label for="firstName">First Name</label>
             <input type="text" id="firstName" name="First Name" required>
